--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Albert+Sans&family=Inter:wght@400;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
